vedio path as changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
           <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-            <source src="../healthcare/video/hospital.mp4" type="video/mp4">
+            <source src="video/hospital.mp4" type="video/mp4">
           </video>
             <nav class="navbar navbar-expand-sm navbar-light bg-dark ">
               <div class="container">
